; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_it8712f_wdt.c_it8712f_wdt_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_it8712f_wdt.c_it8712f_wdt_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@expect_close = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [74 x i8] c"watchdog device closed unexpectedly, will not disable the watchdog timer\0A\00", align 1
@nowayout = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"Watchdog disable failed\0A\00", align 1
@wdt_open = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @it8712f_wdt_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @it8712f_wdt_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %5 = load i32, i32* @expect_close, align 4
  %6 = icmp ne i32 %5, 42
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = call i32 @pr_warn(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str, i64 0, i64 0))
  br label %19

9:                                                ; preds = %2
  %10 = load i32, i32* @nowayout, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %18, label %12

12:                                               ; preds = %9
  %13 = call i64 (...) @it8712f_wdt_disable()
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = call i32 @pr_warn(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %12
  br label %18

18:                                               ; preds = %17, %9
  br label %19

19:                                               ; preds = %18, %7
  store i32 0, i32* @expect_close, align 4
  %20 = call i32 @clear_bit(i32 0, i32* @wdt_open)
  ret i32 0
}

declare dso_local i32 @pr_warn(i8*) #1

declare dso_local i64 @it8712f_wdt_disable(...) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
